# Silhouette

./: .coveragerc  .env.example  .gitignore  .ruff.toml  ACCOMPLISHMENTS.md  CHANGELOG.md  CODEOWNERS  COMPLIANCE.md  CONTRIBUTING.md  CUSTOMER_LICENSE_TEMPLATE.md  DEPLOY_GUIDE.md  Dashboard_progress.md  Dashboard_todo.md  Dockerfile  INTENT_EXAMPLES.json  LICENSE  MANIFEST.in  MILESTONES.md  MODULE_API.md  Makefile  PHASES.md  PHASE_1_ISSUES.md  PROJECT_MANIFEST.json  Quickstart.md  README.md  README_PHASE2.md  RECOVERY.md  RELEASE.md  ROADMAP.md  TODO.md  accelerate_config.yaml  agent_controller.py  agent_messaging.py  auto_dev.yaml  bench_hl7_qa.cmd  cleanup_report.md  codex_controller.py  distributed_executor.py  evaluate_student.py  get_launcher.bat  (+32 more)
.github/: pull_request_template.md
agent/: fs_utils.py  orchestrator.py
agents/: hl7_agent.py
api/: _pydantic_compat.py  activity_log.py  admin.py  agent.py  debug_log.py  diag.py  diag_fallback.py  endpoints.py  engine.py  engine_assist.py  engine_failed.py  engine_jobs.py  engine_messages.py  engine_pipelines.py  engine_profiles.py  http_logging.py  insights.py  interop.py  interop_gen.py  interop_reports_compat.py  metrics.py  mllp_send.py  redaction.py  security.py  sql_logging.py  types.py  ui.py  ui_agents.py  ui_engine.py  ui_interop.py  ui_legacy_pipeline.py  ui_reports.py  ui_security.py  ui_settings.py  ui_shell.py  ui_standalone.py  ui_standalone_1006.py
archive/: test_backup_key.key
cli/: README.md  __init__.py  main.py  response_engine.py
config/: default.yaml  distillation.yml  drift.yml  fhir_target.yaml  gates.yaml  hosts.yaml  identifier_systems.yaml  lanes.yaml  performance.yml  routes.yaml  security.env  skills.yaml  train.yaml  train_config.yaml  train_weighting.yaml
docs/: API.md  Agents.md  Artifacts.md  CLI.md  Config.md  Eval.md  HANDOFF_GUIDE.md  INSTALL_QUICKSTART.md  Knowledge_Distillation.md  Offline_Mode.md  Package_Clone.md  Phase_10_Completion.md  Profiles.md  Quantization.md  README.md  SYSTEM_OVERVIEW.md  Security.md  Skills.md  Training.md  User_Guide.md  agent_api.md  agent_scenarios.md  cli_usage.md  codex_handoff.md  constraints.md  contributing.md  deploy-guide.md  fhir_progress.md  fhir_todo.md  hl7_testing.md  interop_dashboard.md  legacy_pipeline_compat.md  manual_training_guide.md  module-api.md  monitoring.md  offline_parity.md  parking_lot.md  persona-guide.md  philosophy.md  rc_checklist.md  (+8 more)
engine/: __init__.py  builtins.py  contracts.py  ml_assist.py  models.py  plugins.py  registry.py  runner.py  runtime.py  spec.py
eval/: build_runner.py  eval.py
exports/: key_20250624_004815.key  key_20250624_005002.key
insights/: __init__.py  models.py  store.py
maps/: README_UPDATED_RESOURCES.md  additional_resources_uscore.yaml  adt_merge_uscore.yaml  adt_others_uscore.yaml  adt_update_uscore.yaml  adt_uscore.yaml  bar_uscore.yaml  bcode_uscore.yaml  coverage_uscore.yaml  dft_extended_uscore.yaml  dft_uscore.yaml  ecode_uscore.yaml  icode_uscore.yaml  mcode_uscore.yaml  mdm_extended_uscore.yaml  mdm_uscore.yaml  misc_noresource_uscore.yaml  nkjq_misc_uscore.yaml  ocode_uscore.yaml  omx_uscore.yaml  orm_uscore.yaml  oru_uscore.yaml  orx_uscore.yaml  pccode_uscore.yaml  pcode_uscore.yaml  rcode_uscore.yaml  rde_extended_uscore.yaml  rde_uscore.yaml  relatedperson_uscore.yaml  research_uscore.yaml  scode_uscore.yaml  siu_extended_uscore.yaml  siu_uscore.yaml  transforms.py  ucode_uscore.yaml  vcode_uscore.yaml  vxu_uscore.yaml  wcode_uscore.yaml  xcode_uscore.yaml
memory_core/: schema.json
models/: README.md
modules/: README.md  math.json  math.py
offline/: README.md
profiles/: cda_ccd_to_fhir.yml  fhir_profiles.yaml  hl7v2_adt_a01_to_fhir.yml  hl7v2_oru_to_fhir.yml
scripts/: agent_llm_smoke.py  cdse_build_index.py  check_docs.sh  ci_local.sh  create_github_issues.py  dev_engine.sh  dev_mllp_echo.py  docs_linkcheck.py  eval_report.py  export_mermaid.py  fhir_packages.py  generate_teacher_outputs.py  ingest_skill.py  install_shortcuts.bat  install_shortcuts.py  issue_customer_license.py  latency_probe.py  next_phase_issues.yaml  offline_build_wheels.bat  offline_build_wheels.sh  offline_check.sh  offline_install_wheels.bat  offline_install_wheels.sh  offline_load_docker.sh  offline_save_docker.sh  profile_conformance.py  promote_skill_version.py  promote_traces.py  quantize.py  refactor_skills_path_fix.py  regression_gate.py  repro.sh  research_index_corpus.py  run.ui.bat  run_kd_and_eval.sh  run_ui.bat  run_ui.command  run_ui.sh  run_ui_provision.bat  scoreboard.py  (+14 more)
security/: __init__.py  redaction.py  redaction_rules.yaml  scanner.py
silhouette-launcher/: .gitignore  README.md  build_windows.bat  pytest.ini
silhouette_core/: __init__.py  agent_controller.py  agent_loop.py  alignment_engine.py  chunking.py  cli.py  codex_controller.py  distiller.py  drift_detector.py  dsl_parser.py  edge_launcher.py  embedding_engine.py  embedding_schema.sql  evaluate_student.py  export.py  graph_engine.py  identifier_registry.py  intent_engine.py  interface_server.py  memory_core.py  merge_teacher_outputs.py  module_loader.py  (+21 more)
(+1088 files in other folders)
